--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "url": "https://github.com/thewizardplusplus/go-exercises-frontend.git"
   },
   "dependencies": {
+    "antd": "^4.15.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3"
