--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "antd": "^4.15.1",
     "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
+    "react-auth-kit": "^1.4.7",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3"
