--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-dom": "^17.0.2",
     "react-markdown": "^6.0.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3"
+    "react-scripts": "4.0.3",
+    "remark-gfm": "^1.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
