--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-markdown": "^6.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-syntax-highlighter": "^15.4.3",
     "remark-gfm": "^1.0.0"
   },
   "scripts": {
