--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "url": "https://github.com/thewizardplusplus/go-exercises-frontend.git"
   },
   "dependencies": {
+    "ace-builds": "^1.4.12",
     "antd": "^4.15.1",
     "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
+    "react-ace": "^9.4.0",
     "react-auth-kit": "^1.4.7",
     "react-dom": "^17.0.2",
     "react-markdown": "^6.0.2",
